<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.topicviewer.MainActivity">
<RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    <RelativeLayout android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        
        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/temp_button" />
        
           <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/button5"
       android:layout_alignBottom="@+id/button5"
       android:layout_toRightOf="@+id/button5"
       android:text="T" />
           
              <EditText
                  android:id="@+id/editText2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignBottom="@+id/button5"
                  android:layout_alignRight="@+id/button3"
                  android:layout_toRightOf="@+id/textView4"
                  android:ems="10" >

       <requestFocus />
   </EditText>
              
                 <Button
       android:id="@+id/button10"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/button5"
       android:layout_toRightOf="@+id/editText2"
       android:text="@string/MoveToPosition" />
              
    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/button10"
        android:text="@string/showTopicList" />
        
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button4"
        android:text="@string/showTopic" />
            
       <Button
       android:id="@+id/button6"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentStart="true"
       android:layout_below="@+id/textView1"
       android:text="@string/BiggerTopicImage" />
       
          <EditText
              android:id="@+id/editText3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBottom="@+id/button6"
              android:layout_alignTop="@+id/button6"
              android:layout_toEndOf="@+id/button6"
              android:layout_toLeftOf="@+id/button10"
              android:ems="10"
              android:text="test" />
          
             <Button
       android:id="@+id/button11"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/editText3"
       android:layout_alignBottom="@+id/editText3"
       android:layout_toEndOf="@+id/editText3"
       android:text="@string/ChangeDataBase" />
    
   <ImageView
       android:id="@+id/imageView1"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/button6"
       android:contentDescription="@string/topicImage"
       android:src="@android:drawable/ic_menu_gallery" />
                
   	<Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView1"   
        android:layout_marginTop="10dp"     
        android:text="@string/showAnswer" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentStart="true"  
		android:layout_below="@+id/button1"         
        android:text="@string/showAnswer" />
    
       <Button
       android:id="@+id/button7"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentStart="true"
       android:layout_below="@+id/textView2"
       android:text="@string/BiggerAnswerImage"  />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7" 
        android:contentDescription="@string/answerImage" 
        android:src="@android:drawable/ic_menu_gallery" />


    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"   
        android:layout_marginTop="10dp"     
        android:text="@string/lastTopic" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/button2"
        android:layout_below="@+id/imageView2"   
        android:layout_marginTop="10dp"    
        android:layout_marginStart="10dp"     
        android:text="@string/nextTopic"  />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button2"  
        android:text="@string/comment"  />
    
   <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"         
        android:ems="10"
        android:inputType="textMultiLine" >
    </EditText>

   <Button
       android:id="@+id/button8"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       
       android:layout_alignParentEnd="true"
       android:layout_alignTop="@+id/button2"  
       android:text="@string/CommentUpdate" />

   <Button
       android:id="@+id/button9"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignTop="@+id/button2"
       android:layout_toEndOf="@+id/button3"
       android:text="@string/ShowComment" />

   <TextView
       android:id="@+id/textView5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/editText1"
       android:layout_toEndOf="@+id/textView3"
       android:layout_marginStart="10dp"
       android:text="@string/CommentState" />

   <Button
       android:id="@+id/button12"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignTop="@+id/button1"
       android:layout_toEndOf="@+id/textView4"
       android:text="@string/ShowAnswerPic" />

   <Button
       android:id="@+id/button13"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_alignTop="@+id/button11"
       android:text="THV" />

   <Button
       android:id="@+id/button14"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/imageView2"
       android:layout_alignParentRight="true"
       android:text="AHV" />

   <TextView
       android:id="@+id/textView6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/button7"
       android:layout_alignBottom="@+id/button7"
       android:layout_alignStart="@+id/button3"
       android:text="答案图片：" />

   <TextView
       android:id="@+id/textView7"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
	   android:layout_alignBaseline="@+id/button7"
	   android:layout_toEndOf="@+id/textView6"
       android:text="TextView" />

   <CheckBox
       android:id="@+id/checkBox1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/button12"
       android:layout_alignBottom="@+id/button12"
       android:layout_alignParentRight="true"
       android:text="错题" />

   <TextView
       android:id="@+id/textView8"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/checkBox1"
       android:layout_toEndOf="@+id/button12"
       android:layout_toStartOf="@+id/checkBox1"   
       android:layout_below="@+id/imageView1"    
       android:text="Large Text"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   <Spinner
       android:id="@+id/spinner1"
       android:layout_width="50dp"
       android:layout_height="25dp"
	   android:layout_above="@+id/editText1"
       android:layout_toEndOf="@+id/textView5"
       android:layout_below="@+id/button3"
       android:layout_centerHorizontal="true" />

    </RelativeLayout>
    </RelativeLayout>
</ScrollView>
